header css update

--- a/webapp/app-styles/theme-scss/theme-style.scss
+++ b/webapp/app-styles/theme-scss/theme-style.scss
@@ -74,9 +74,9 @@
 // OPTIONAL: Misc.
 // -------------------------------------------
 @import "core/layout-variations.scss"; // Boxed layout etc, can remove if only uses default
-@import "core/colour-switcher.scss"; // Demo only (can remove)
+//@import "core/colour-switcher.scss"; // Demo only (can remove)
 @import "core/grid.scss"; // Demo only (can remove)
-@import "core/region-header-variations.scss"; // Header variations, can be removed if you only use the default header OR copy&paste the header you want into _custom-style.scss
+//@import "core/region-header-variations.scss"; // Header variations, can be removed if you only use the default header OR copy&paste the header you want into _custom-style.scss
 
 
 // -------------------------------------------
