--- a/webapp/app-components/header.scss
+++ b/webapp/app-components/header.scss
@@ -1,6 +1,24 @@
+//@import "~bootstrap/scss/mixins/breakpoints";
+
+#header {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 1000;
+}
 
 .header {
+  padding: 15px 0;
   border-bottom: 1px solid rgba(#b771b0, .3);
+}
+//@include media-breakpoint-up(sm) {
+//  .header{
+//    padding: 20px 0;
+//  }
+//}
+.header-inner {
+  display: flex;
 }
 
 .header-transparent {
