added job search result

--- a/webapp/app-styles/theme-scss/core/_primary-colours.scss
+++ b/webapp/app-styles/theme-scss/core/_primary-colours.scss
@@ -194,7 +194,7 @@
 // ----------------------
 .btn-link,
 .btn-link:hover {
-  color: $primary_colour; 
+  //color: $primary_colour;
 }
 .text-primary,
 a.text-primary:hover,
