--- a/webapp/app-styles/app-style.scss
+++ b/webapp/app-styles/app-style.scss
@@ -1,10 +1,94 @@
+@import "variables";
 @import "~bootstrap/scss/bootstrap";
-@import "theme-scss/theme-style";
-@import "theme-scss/custom-style";
 @import "fontawsome-scss/fontawesome";
 @import "fontawsome-scss/fa-solid";
 @import "fontawsome-scss/fa-regular";
 @import "fontawsome-scss/fa-brands";
+@import "./theme-scss/init";
+@import "./theme-scss/core/overlay";
+
+$sizes: (
+        auto: auto,
+        10: 10%,
+        20: 20%,
+        25: 25%,
+        50: 50%,
+        75: 75%,
+        80: 80%,
+        100: 100%,
+  //60px: 60px,
+  //80px: 80px,
+  //100px: 100px
+);
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+    @each $prop, $abbrev in (width: w, height: h) {
+      @each $size, $length in $sizes {
+        .#{$abbrev}#{$infix}-#{$size} {
+          #{$prop}: $length !important;
+        }
+      }
+    }
+  }
+}
+
+body {
+  font-family: "Open Sans", Arial, serif;
+}
+
+// =============  buttons
+.btn.btn-rounded {
+  border-radius: 30px;
+}
+
+.btn.btn-circle {
+  border-radius: 100%;
+}
+
+.btn-icon.btn-circle {
+  width: 2rem;
+  height: 2rem;
+  vertical-align: middle;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-sm, .btn-group-sm > .btn {
+  font-size: .75rem;
+}
+
+.btn-lg, .btn-group-lg > .btn {
+  font-size: 1.1rem;
+}
+
+.btn-primary {
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+// ============= form
+
+$colorFormControlDark: rgba(255, 255, 255, 0.5);
+
+.form-control-dark,
+.form-control-dark:focus {
+  color: rgba(255, 255, 255, 0.8) !important;
+  outline: none;
+  &::-webkit-input-placeholder {
+    color: lighten($colorFormControlDark, 20%);
+  }
+  &:-moz-placeholder { /* Firefox 18- */
+    color: lighten($colorFormControlDark, 20%);
+  }
+  &::-moz-placeholder { /* Firefox 19+ */
+    color: lighten($colorFormControlDark, 20%);
+  }
+  &:-ms-input-placeholder {
+    color: lighten($colorFormControlDark, 20%);
+  }
+}
 
 .form-check-inline {
   padding: 0.375rem 0.75rem;;
@@ -12,14 +96,56 @@
 
 .form-group {
 
-  [class*="col"] {
-    display: flex;
-    align-items: center;
-  }
-
   .invalid-feedback {
     position: absolute;
     bottom: -20px;
   }
 
+}
+
+// ============= flex
+.flex-fullwitdh {
+  flex: 1;
+  width: 100%;
+}
+
+// ============= position
+
+.absolute-left {
+  position: absolute;
+  left: 0;
+}
+
+.absolute-top-left {
+  @extend .absolute-left;
+  top: 0;
+}
+
+// ============= hr
+hr.hr-lg {
+  border-top-width: 3px;
+}
+
+// ============= bg
+.bg-dark2 {
+  background-color: $dark2;
+}
+
+.noshadow,
+.noshadow:focus {
+  box-shadow: none;
+}
+
+// ============= text
+.text-sm {
+  font-size: 90% !important;
+}
+
+.text-xs {
+  font-size: 70% !important;
+}
+
+// ============= hover
+.hover-light:hover {
+  background-color: $light;
 }
