changed header bgcolor

--- a/webapp/app-components/header.scss
+++ b/webapp/app-components/header.scss
@@ -4,7 +4,7 @@
   //padding: 15px 0;
   font-family: "Rambla", sans-serif;
   border-bottom: 1px solid rgba($primary, .3);
-  background-color: $dark;
+  background-color: $dark2;
 }
 
 .header-divider {
